# goit-pythonweb-hw-12

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py  contacts.rst  index.rst  modules.rst  users.rst
migrations/: env.py
migrations/versions/: ad1711afc037_update_models.py  c1eaf314dd11_init.py  caf44cd1b566_add_to_model_user_filed_confirmed.py  d1003f1e2e46_add_user.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  limiter.py  permissions.py  redis_cache.py  upload_file.py  users.py
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_repository_contacts.py  test_repository_users.py  test_services_auth.py  test_services_email.py
tests/tests/: test_services_upload.py
